--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -6,7 +6,11 @@ body {
   background: linear-gradient(to right, #243B55, #141E30);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   min-height: 100%;
-  padding: 2em 0;
+}
+
+main.container {
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 @media only screen and (min-width: 1024px) {
