--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,13 +20,10 @@
 </head>
 <body>
     <main class="container">
-        <div class="ui segment">
-            <h1>What Star Trek Character are You?</h1>
-            <p>Answer a few questions, then find out what Star Trek character you're most like!</p>
-            <a href="/survey"><button class="fluid ui button">Start the Quiz!</button></a>
-        </div>
-    </main>
 
+        {{{body}}}
+        
+    </main>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
