--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
         {{{body}}}
         
     </main>
+    
+    <script src="assets/js/utils.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
