Added comparison logic

--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -57,10 +57,23 @@
             </div>
         </div>
 
-        <div id="success" class="ui modal">
-            <div class="header">Your closest match was:</div>
-            <div class="content">
-                <p>info here</p>
+        <div id="character" class="ui modal">
+            <div class="header">Your closest character match was: <span id="charName"><!-- Name Here --></span></div>
+            <div class="image content">
+                 <div id="charImage" class="ui medium image"><!-- Image Here --></div>
+                 <div class="description"></div>
+            </div>
+            <div class="actions">
+                <div class="ui approve button">Okay</div>
+            </div>
+        </div>
+
+        
+        <div id="trekkie" class="ui modal">
+            <div class="header">Your closest fan match was: <span id="trekkieName"><!-- Name Here --></span></div>
+            <div class="image content">
+                 <div id="trekkieImage" class="ui medium image"><!-- Image Here --></div>
+                 <div class="description"></div>
             </div>
             <div class="actions">
                 <div class="ui approve button">Okay</div>
