Created renderModal methods

--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div id="character" class="ui modal">
+        <div id="char" class="ui modal">
             <div class="header">Your closest character match was: <span id="charName"><!-- Name Here --></span></div>
             <div class="image content">
                  <div id="charImage" class="ui medium image"><!-- Image Here --></div>
