--- a/views/survey.handlebars
+++ b/views/survey.handlebars
@@ -64,7 +64,7 @@
                  <div class="description"></div>
             </div>
             <div class="actions">
-                <div class="ui approve button">Okay</div>
+                <div id="charBtn" class="ui approve button">Okay</div>
             </div>
         </div>
 
