--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -9,14 +9,18 @@ body {
 }
 
 main.container {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  padding: 1em;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 1024px) {
-  .container {
+  main.container {
     width: 50%;
-    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 768px) {
+  main.container {
+    width: 80%;
   }
 }
 
