--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
-<div class="ui segment">
-    <h1>What Star Trek Character are You?</h1>
-    <p>Answer a few questions, then find out what Star Trek character you're most like!</p>
-    <a href="/survey"><button class="fluid ui button">Start the Quiz!</button></a>
+<div class="flex-container">
+    <div class="ui segment flex-item" id="main">
+        <h1 class="ui center aligned header theme-header">What Star Trek Character are You?</h1>
+        <p class="text-center">Answer a few questions, then find out what Star Trek character you're most like!</p>
+        <a href="/survey"><button class="fluid ui button">Start the Quiz!</button></a>
+    </div>
 </div>
