--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Webfonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Teko:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Exo+2:700&display=swap" rel="stylesheet">
 
     <!-- Semantic UI -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
@@ -16,7 +16,7 @@
     <!-- Css -->
     <link rel="stylesheet" href="assets/css/style.css">
                 
-    <title>Document</title>
+    <title>Star Trek Character Quiz</title>
 </head>
 <body>
     <main class="container">
